--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="org.phauna.litecoinwidget"
       android:versionCode="30"
-      android:versionName="30">
+      android:versionName="30"
+      android:installLocation="internalOnly">
 
  <uses-permission android:name="android.permission.INTERNET"/>
  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
